Fix: flex-wrap property in loader

--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -14,7 +14,7 @@ $animation-duration: 2500ms;
     left: 0;
     z-index: 2;
     display: flex;
-    wrap: nowrap;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: flex-start;
     
