--- a/style/style.css
+++ b/style/style.css
@@ -543,7 +543,7 @@ button:hover::after {
   left: 0;
   z-index: 2;
   display: flex;
-  wrap: nowrap;
+  flex-wrap: nowrap;
   justify-content: center;
   align-items: flex-start;
   animation-name: loaderVanish;
